# domain

./: .gitignore  Cargo.toml  README.md  config.toml  config.yaml
.github/workflows/: build-drivers-pi.yaml  delete-artifacts.yaml
audiocloud-domain-server/: Cargo.toml  build.rs
audiocloud-domain-server/migrations/: 20220901234925_init.sql
audiocloud-domain-server/src/: audio_engine.rs  cloud.rs  config.rs  data.rs  db.rs  events.rs  instance.rs  lib.rs  media.rs  models.rs  nats.rs  o11y.rs  rest.rs  rest_api.rs  service.rs  task.rs  tracker.rs  web_sockets.rs
audiocloud-domain-server/src/config/: cloud.rs  file.rs  mod.rs
audiocloud-domain-server/src/data/: instance.rs  reaper.rs  session.rs
audiocloud-domain-server/src/db/: instance.rs  media.rs  migrations.rs  mod.rs  models.rs  sys_props.rs  tasks.rs  tests.rs
audiocloud-domain-server/src/db/migrations/: 0000-2022-09-19T13:59.sql
audiocloud-domain-server/src/events/: kafka.rs  log_events.rs  mod.rs
audiocloud-domain-server/src/events/kafka/: commands.rs  events.rs  kafka_commands.rs  kafka_events.rs
audiocloud-domain-server/src/fixed_instances/: driver.rs  instance.rs  media.rs  messages.rs  mod.rs  power.rs  supervisor.rs  values.rs
audiocloud-domain-server/src/instance/: messages.rs
audiocloud-domain-server/src/media/: download.rs  mod.rs  supervisor.rs  tests.rs  upload.rs
audiocloud-domain-server/src/o11y/: mod.rs  opentelemetry.rs  otlp.rs  sentry.rs
audiocloud-domain-server/src/rest_api/: mod.rs  v1.rs
audiocloud-domain-server/src/rest_api/v1/: streaming.rs  tasks.rs
audiocloud-domain-server/src/service/: cloud.rs  instance.rs  media.rs  nats.rs  session.rs
audiocloud-domain-server/src/service/instance/: actor.rs
audiocloud-domain-server/src/service/media/: download.rs  messages.rs  upload.rs
audiocloud-domain-server/src/service/session/: audio_engine.rs  messages.rs  session_audio_engine.rs  session_instances.rs  session_media.rs  supervisor.rs
audiocloud-domain-server/src/sockets/: messages.rs  mod.rs  supervisor.rs  web_rtc.rs  web_sockets.rs
audiocloud-domain-server/src/sockets/supervisor/: packets.rs  receive.rs  sockets.rs  task_events.rs  timers.rs
audiocloud-domain-server/src/task/: messages.rs  session_instances.rs  supervisor.rs
audiocloud-domain-server/src/tasks/: messages.rs  mod.rs  supervisor.rs  task.rs  task_engine.rs  task_fixed_instance.rs
audiocloud-domain-server/src/tasks/supervisor/: cancel_render.rs  create_task.rs  get_task.rs  handle_instance_events.rs  handle_task_events.rs  list_tasks.rs  modify_task.rs  packets.rs  play_task.rs  render_task.rs  seek_task.rs  set_desired_play_state.rs  stop_play.rs  task_timers.rs
audiocloud-domain-server/src/tasks/task/: cancel_render.rs  handle_engine_events.rs  modify_task.rs  packet_handling.rs  play_task.rs  render_task.rs  seek_task.rs  set_desired_play_state.rs  stop_play.rs
audiocloud-domain-server/src/tests/: mod.rs
audiocloud-domain-server/src/web_sockets/: messages.rs  supervisor.rs
audiocloud-driver/: Cargo.toml  dev.yaml
audiocloud-driver/src/: distopik.rs  driver.rs  lib.rs  nats.rs  netio.rs  rest_api.rs  supervisor.rs  utils.rs
audiocloud-driver/src/distopik/: dual_1084.rs  summatra.rs
audiocloud-driver/src/netio/: netio4.rs  netio4_mocked.rs  power_pdu_4c.rs  power_pdu_4c_mocked.rs  tests.rs
audiocloud-driver/src/rest_api/: v1.rs
audiocloud-media-server/: Cargo.toml  README.md
audiocloud-media-server/src/: config.rs  db.rs  lib.rs  nats_api.rs  rest_api.rs  service.rs
audiocloud-media-server/tests/: media.http
audiocloud-reaper-plugin/: Cargo.toml
audiocloud-reaper-plugin/src/: audio_engine.rs  audiocloud_plugin.rs  control_surface.rs  events.rs  lib.rs  streaming.rs
audiocloud-reaper-plugin/src/audio_engine/: fixed_instance.rs  media_item.rs  media_track.rs  mixer.rs  project.rs  rest_api.rs
audiocloud-reaper-plugin/src/control_surface/: track.rs
audiocloud-reaper-plugin/templates/: reaper_track.xml.jinja  reaper_track_media.xml.jinja
audiocloud-reaper-plugin/templates/audio_engine/: auxrecv_connection.txt  hwout_return.txt  hwout_send.txt  media_item.txt  media_track.txt  mixer_track_input.txt  mixer_track_output.txt  project.txt  reainsert_return.txt  reainsert_send.txt
data-layer/: package-lock.json  package.json
data-layer/prisma/: schema.prisma
