[package]
name = "audiocloud-domain-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1"
actix-cors = "0.6"
actix-broker = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
anyhow = "1"
once_cell = "1"
futures = "0.3"
rayon = "1"
maplit = "1"
nats-aflowt = "0.16"
regex = "1"
askama = "0.11"
bytes = "1"
webrtc = "0.4"
itertools = "0.10"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.dashmap]
version = "5"
features = ["rayon"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tracing-actix-web]
version = "0.6"
features = ["opentelemetry_0_17", "emit_event_on_error"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.rdkafka]
version = "0.28"
features = ["gssapi-vendored", "ssl-vendored"]

[dependencies.clap]
version = "3"
features = ["derive", "env"]

[dependencies.audiocloud-api]
path = "../../apis/audiocloud-api"


