[package]
name = "audiocloud-domain-server"
version = "0.2.0"
edition = "2021"
authors = [
    "Bojan Šernek <bojan@distopik.com>"
]

description = "Audiocloud Domain Server"

[dependencies]
dotenv = "0.15"
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1"
actix-cors = "0.6"
actix-broker = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
anyhow = "1"
toml = "0.5"
once_cell = "1"
futures = "0.3"
rayon = "1"
maplit = "1"
nats-aflowt = "0.16"
regex = "1"
askama = "0.11"
bytes = "1"
webrtc = "0.5"
itertools = "0.10"
tokio-util = "0.7"
async-trait = "0.1"
derive_more = "0.99"
mime = "0.3"
nanoid = "0.4"

[dependencies.kv]
version = "0.24"
features = ["msgpack-value", "json-value"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.dashmap]
version = "5"
features = ["rayon"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["stream", "brotli", "gzip", "multipart", "json"]

[dependencies.rdkafka]
version = "0.28"
features = ["gssapi-vendored", "ssl-vendored"]

[dependencies.clap]
version = "3"
features = ["derive", "env"]

[dependencies.audiocloud-api]
path = "../../apis/audiocloud-api"

[dependencies.audiocloud-models]
path = "../../apis/audiocloud-models"


