[package]
name = "audiocloud-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.audiocloud-api]
git = "https://github.com/audiocloud/apis.git"

[dependencies.audiocloud-models]
git = "https://github.com/audiocloud/apis.git"
