[package]
name = "audiocloud-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.audiocloud-api]
path = "../../apis/audiocloud-api"

[dependencies.audiocloud-models]
path = "../../apis/audiocloud-models"
