[package]
name = "audiocloud-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats-aflowt = "0.16"
once_cell = "1"
dotenv = "0.15"
actix = "0.13"
actix-broker = "0.4"
serde_yaml = "0.8"
serde_repr = "0.1"
serde_json = "1"
maplit = "1"
anyhow = "1"
tracing = "0.1"
futures = "0.3"
tracing-subscriber = "0.3"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.clap]
version = "3"
features = ["derive", "env"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.audiocloud-api]
path = "../../apis/audiocloud-api"

[dependencies.audiocloud-models]
path = "../../apis/audiocloud-models"
