[package]
name = "audiocloud-media-server"
version = "0.1.0"
edition = "2021"

[dependencies]
nats-aflowt = "0.16"
actix-web = "4"
once_cell = "1"
tracing = "0.1"
futures = "0.3"
anyhow = "1"
dotenv = "0.15"
tokio-util = "0.7"
serde_json = "1"

[dependencies.tokio]
version = "1.20"
features = ["fs"]

[dependencies.mongodb]
version = "2"

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.clap]
version = "3"
features = ["derive", "env"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.reqwest]
version = "0.11"
features = ["stream", "brotli", "gzip", "multipart", "json"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["time", "env-filter"]

[dependencies.audiocloud-api]
path = "../../apis/audiocloud-api"
